作例を追加

--- a/src/distortion-filter.html
+++ b/src/distortion-filter.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 
+<!-- フィルターを適用したい画像 -->
 <img src="images/ab_03.jpg" alt="" class="image">
 
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
@@ -51,9 +52,6 @@
         scale="50"
     />
   </filter>
-
-  <!--an area where the picture will be shown, initially dotted, then the
-      photo is mixed in with the filter-->
 </svg>
 </body>
 </html>
