--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,22 @@
   <title>目次</title>
 </head>
 <body>
+<h1>SVGフィルター作例集の目次</h1>
 <ul>
   <li>
-    <a href="rough-filter.html">ざらざら</a>
+    <a href="rough-filter.html">ざらざらフィルター</a>
   </li>
   <li>
-    <a href="distortion-filter.html">ゆがみ</a>
+    <a href="glass-filter.html">すりガラス風フィルター</a>
   </li>
   <li>
-    <a href="glass-filter.html">ガラス</a>
+    <a href="distortion-filter.html">ゆがみフィルター</a>
+  </li>
+  <li>
+    <a href="rough-paper-filter.html">紙っぽいフィルター</a>
+  </li>
+  <li>
+    <a href="posterization-filter.html">ポスタリゼーション</a>
   </li>
   <li>
     <a href="glitch-filter.html">グリッチノイズフィルター</a>
@@ -22,6 +29,10 @@
   <li>
     <a href="pixel-art-filter.html">ドット絵風フィルター</a>
   </li>
+  <li>
+    <a href="dotgain-filter.html">新聞の写真風フィルター</a>
+  </li>
+
 </ul>
 </body>
 </html>
