--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,22 @@
     <a href="rough-filter.html">ざらざらフィルター</a>
   </li>
   <li>
-    <a href="glass-filter.html">すりガラス風フィルター</a>
+    <a href="glass-filter.html">ガラス風フィルター</a>
   </li>
   <li>
     <a href="distortion-filter.html">ゆがみフィルター</a>
   </li>
   <li>
-    <a href="rough-paper-filter.html">紙っぽいフィルター</a>
+    <a href="paper-filter.html">紙っぽいフィルター</a>
   </li>
   <li>
     <a href="posterization-filter.html">ポスタリゼーション</a>
   </li>
   <li>
     <a href="glitch-filter.html">グリッチノイズフィルター</a>
+  </li>
+  <li>
+    <a href="stripe-filter.html">ストライプなフィルター</a>
   </li>
   <li>
     <a href="pixel-art-filter.html">ドット絵風フィルター</a>
