--- a/src/posterization-filter.html
+++ b/src/posterization-filter.html
@@ -18,7 +18,8 @@
   </style>
 </head>
 <body>
-<img src="images/ab_03.jpg" alt="" class="image">
+<img src="images/ab_02.jpg" width="500" height="800" alt="" class="image">
+<img src="images/ab_08.jpg" alt="" class="image">
 
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
@@ -34,18 +35,18 @@
       <feFuncB type="gamma" exponent="0.5"/>
     </feComponentTransfer>
 
-    <!-- 階調数4 -->
+    <!-- 階調数5 -->
     <feComponentTransfer>
-      <feFuncR type="discrete" tableValues="0 0.33 0.66 1"/>
-      <feFuncG type="discrete" tableValues="0 0.33 0.66 1"/>
-      <feFuncB type="discrete" tableValues="0 0.33 0.66 1"/>
+      <feFuncR type="discrete" tableValues="0 0.25 0.5 0.75 1"/>
+      <feFuncG type="discrete" tableValues="0 0.25 0.5 0.75 1"/>
+      <feFuncB type="discrete" tableValues="0 0.25 0.5 0.75 1"/>
     </feComponentTransfer>
 
-    <!-- 無彩色から有彩色に変換 -->
+    <!-- 有彩色に変換 -->
     <feComponentTransfer>
-      <feFuncR type="table" tableValues="0.00 0.82 0.35 1.00"/>
-      <feFuncG type="table" tableValues="0.03 0.00 0.75 0.77"/>
-      <feFuncB type="table" tableValues="0.26 0.75 0.85 0.18"/>
+      <feFuncR type="table" tableValues="0.165 0.345 0.886 0.35 0.78"/>
+      <feFuncG type="table" tableValues="0.137 0.416 0.353 0.75 1.00"/>
+      <feFuncB type="table" tableValues="0.337 0.886 0.773 0.85 0.973"/>
     </feComponentTransfer>
   </filter>
 </svg>
