--- a/src/rough-filter.html
+++ b/src/rough-filter.html
@@ -19,21 +19,34 @@
 </head>
 <body>
 
-<img src="images/ab_03.jpg" alt="" class="image">
+<img src="images/ab_04.jpg" width="960" height="540" alt="" class="image">
+<img src="images/ab_04.jpg" width="960" height="540" alt="">
 
-<svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
+<svg width="100%" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
-    <feTurbulence
-        type="fractalNoise"
-        baseFrequency="0.5"
-        numOctaves="1"
-        stitchTiles="stitch"
-    />
+    <!-- 周辺減光 -->
+    <feComponentTransfer result="photo">
+      <feFuncR type="linear" slope="0.5"/>
+      <feFuncG type="linear" slope="0.5"/>
+      <feFuncB type="linear" slope="0.5"/>
+    </feComponentTransfer>
+    <feSpecularLighting specularConstant="2" specularExponent="20" lighting-color="white">
+      <fePointLight x="480" y="270" z="500"/>
+    </feSpecularLighting>
+    <feBlend in="" in2="photo" mode="overlay" result="vignetting"/>
 
-    <!-- 白黒化 -->
-    <feColorMatrix type="saturate" values="0" />
-    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.4 0"/>
-    <feBlend in="" in2="SourceGraphic" mode="overlay" />
+    <!-- ざらざらノイズ -->
+    <feTurbulence type="turbulence" baseFrequency="0.5" numOctaves="5"/>
+    <!-- アルファチャンネルのコントラストを下げる（少し透明にする） -->
+    <feComponentTransfer>
+      <feFuncA type="linear" slope="0.6"/>
+    </feComponentTransfer>
+
+    <!-- オーバーレイで合成 -->
+    <feBlend in="" in2="vignetting" mode="overlay"/>
+
+    <!-- はみ出したフィルターを元の画像サイズでクリッピング -->
+    <feComposite in2="SourceGraphic" operator="in" />
   </filter>
 </svg>
 </body>
