--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,20 @@
     <a href="glitch-filter.html">グリッチノイズフィルター</a>
   </li>
   <li>
-    <a href="stripe-filter.html">ストライプなフィルター</a>
-  </li>
-  <li>
     <a href="pixel-art-filter.html">ドット絵風フィルター</a>
   </li>
   <li>
     <a href="dotgain-filter.html">新聞の写真風フィルター</a>
   </li>
-
+  <li>
+    <a href="stripe-filter.html">ストライプなフィルター</a>
+  </li>
+  <li>
+    <a href="filter-test.html">SVGフィルターの検証</a>
+  </li>
+  <li>
+    <a href="color.html">feFuncXのtableValues生成ツール</a>
+  </li>
 </ul>
 </body>
 </html>
