--- a/src/distortion-filter.html
+++ b/src/distortion-filter.html
@@ -3,54 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>歪みフィルター</title>
+  <title>ゆれフィルター</title>
+  <link rel="stylesheet" href="style.css"/>
   <style>
-    html, body {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-    }
-
     .image {
       display: block;
       filter: url(#filter);
+      clip-path: inset(15px); /* ズレの部分を隠すため内側にクリッピング */
     }
   </style>
 </head>
 <body>
-
 <!-- フィルターを適用したい画像 -->
-<img src="images/ab_03.jpg" alt="" class="image">
+<img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
+<img src="images/image-2.jpg" width="480" height="640" alt="" class="image">
 
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
     <!-- 色チャンネルを分解 -->
     <!-- 元の画像から G チャンネルだけ抽出し「g」として登録 -->
     <feColorMatrix in="SourceGraphic" type="matrix" values="0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0" result="g"/>
-
     <!-- 元の画像から B チャンネルだけ抽出し「b」として登録 -->
     <feColorMatrix in="SourceGraphic" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0" result="b"/>
-
-    <!-- 元の画像から R チャンネルだけ抽出し、少しぼかしてずらす（レトロ加工） -->
+    <!-- 元の画像から R チャンネルだけ抽出し、少しずらしてぼかす -->
     <feColorMatrix in="SourceGraphic" type="matrix" values="1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0"/>
     <feOffset dx="3" dy="1"/>
     <feGaussianBlur stdDeviation="2"/>
-    <!-- 元グラフィックから R だけ抽出し、下にズラし、そこに G/B を比較(明)モードで重ねる -->
+    <!-- G/B チャンネルを比較(明)モードで重ねる -->
     <feComposite in="g" in2="" operator="lighter"/>
     <feComposite in="b" in2="" operator="lighter" result="rgb-layers"/>
 
-    <feTurbulence
-        type='fractalNoise'
-        baseFrequency='0 0.04'
-        numOctaves='2'
-        stitchTiles='stitch'
-        result="turbulence-layer"
-    />
-    <feDisplacementMap
-        in="rgb-layers"
-        in2=""
-        scale="50"
-    />
+    <!-- ゆれの表現 -->
+    <feTurbulence type="fractalNoise" baseFrequency="0 0.1" numOctaves="2"/>
+    <feDisplacementMap in="rgb-layers" in2="" scale="40"/>
   </filter>
 </svg>
 </body>
