--- a/src/posterization-filter.html
+++ b/src/posterization-filter.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ポスタリゼーション</title>
+  <link rel="stylesheet" href="style.css"/>
   <style>
-    html, body {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-    }
-
     .image {
       display: block;
       filter: url(#filter);
@@ -18,15 +13,15 @@
   </style>
 </head>
 <body>
-<img src="images/ab_02.jpg" width="500" height="800" alt="" class="image">
-<img src="images/ab_08.jpg" alt="" class="image">
+<img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
+<img src="images/image-2.jpg" width="480" height="640" alt="" class="image">
 
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
     <!-- 少しぼかす -->
     <feGaussianBlur stdDeviation="1.2"/>
     <!-- 白黒化 -->
-    <fecolormatrix type="saturate" values="0"/>
+    <feColorMatrix type="saturate" values="0"/>
 
     <!-- ガンマ補正（山型：明るくする） -->
     <feComponentTransfer>
@@ -44,9 +39,9 @@
 
     <!-- 有彩色に変換 -->
     <feComponentTransfer>
-      <feFuncR type="table" tableValues="0.165 0.345 0.886 0.35 0.78"/>
-      <feFuncG type="table" tableValues="0.137 0.416 0.353 0.75 1.00"/>
-      <feFuncB type="table" tableValues="0.337 0.886 0.773 0.85 0.973"/>
+      <feFuncR type="table" tableValues="0.19,0.80,0.27,0.98,0.78"/>
+      <feFuncG type="table" tableValues="0.21,0.24,0.46,0.86,0.96"/>
+      <feFuncB type="table" tableValues="0.37,0.46,0.76,0.86,1.00"/>
     </feComponentTransfer>
   </filter>
 </svg>
