目次へ戻るリンクの追加

--- a/src/color.html
+++ b/src/color.html
@@ -33,6 +33,8 @@
   <rect width="100%" height="100%" fill="url(#gradient)" />
 </svg>
 
+<a href="../index.html">目次へ戻る</a>
+
 <script>
   const colorPicker = document.querySelectorAll(".colorPicker");
   const red = document.querySelector("#red");
