--- a/src/stripe-filter.html
+++ b/src/stripe-filter.html
@@ -15,7 +15,9 @@
 <body>
 <img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
 <img src="images/image-2.jpg" width="480" height="640" alt="" class="image">
+<img src="images/image-3.jpg" width="512" height="512" alt="" class="image">
 
+<!-- フィルター -->
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
     <!-- 横線（画像の暗い部分を描画） -->
@@ -56,5 +58,7 @@
     <feComposite in2="SourceGraphic" operator="in"/>
   </filter>
 </svg>
+
+<a href="../index.html">目次へ戻る</a>
 </body>
 </html>
