--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>目次</title>
+  <title>SVGフィルター作例集 目次</title>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
 <h1>SVGフィルター作例集 目次</h1>
