--- a/src/dotgain-filter.html
+++ b/src/dotgain-filter.html
@@ -3,21 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>白黒印刷風フィルター</title>
+  <title>新聞の写真フィルター</title>
   <link rel="stylesheet" href="style.css"/>
   <style>
     .image {
-      display: block;
       filter: url(#filter);
     }
   </style>
 </head>
 <body>
-<!-- フィルターを適用したい画像 -->
+<p>imgタグで描画</p>
 <img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
-<img src="images/image-2.jpg" width="480" height="640" alt="" class="image">
 
-<svg width="0" height="0"  xmlns="http://www.w3.org/2000/svg">
+<p>svgのimageタグで描画</p>
+<svg width="512" height="384" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-1.jpg" width="100%" height="100%" class="image"/>
+</svg>
+
+<svg width="480" height="640" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-2.jpg" width="100%" height="100%" class="image"/>
+</svg>
+
+<svg width="512" height="512" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-3.jpg" width="100%" height="100%" class="image"/>
+</svg>
+
+<!-- フィルター -->
+<svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="filter">
     <!-- 4px四方のタイルの作成 -->
     <!-- ■□ -->
@@ -32,6 +44,7 @@
     <feComposite in2="" width="4" height="4"/>
     <feTile result="tile2"/>
 
+    <!-- タイル同士を合成 -->
     <!-- ■□ -->
     <!-- □■ -->
     <feComposite in="tile1" in2="tile2" operator="over" result="tile"/>
@@ -51,8 +64,10 @@
     </feComponentTransfer>
 
     <!-- はみ出したフィルターを元の画像サイズでクリッピング -->
-    <feComposite operator="in" in2="SourceGraphic" />
+    <feComposite operator="in" in2="SourceGraphic"/>
   </filter>
 </svg>
+
+<a href="../index.html">目次へ戻る</a>
 </body>
 </html>
