--- a/index.html
+++ b/index.html
@@ -47,5 +47,12 @@
     <a href="src/color.html">feFuncXのtableValues生成ツール</a>
   </li>
 </ul>
+
+<section>
+  <h2>参考：フィルター適用前の画像</h2>
+  <img src="src/images/image-1.jpg" width="512" height="384" alt="" class="image">
+  <img src="src/images/image-2.jpg" width="480" height="640" alt="" class="image">
+  <img src="src/images/image-3.jpg" width="512" height="512" alt="" class="image">
+</section>
 </body>
 </html>
