フィルター名を記事に合わせるように

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>SVGフィルター作例集 目次</h1>
 <ul>
   <li>
-    <a href="src/rough-filter.html">ざらざらフィルター</a>
+    <a href="src/rough-filter.html">ざらざらノイズフィルター</a>
   </li>
   <li>
     <a href="src/glass-filter.html">ガラス風フィルター</a>
